--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -180,71 +180,43 @@ jobs:
             echo "Finished tree loop (non-push). Total iterations: $TREE_LOOP_ITERATIONS."
           fi
 
-          # Assign array length to variable for robust arithmetic checks
-          FILES_COUNT=${#FILES_TO_PROCESS[@]}
-          echo "DEBUG: FILES_TO_PROCESS array contents (first 5 elements if any):"
-          if (( FILES_COUNT > 0 )); then
-            printf "'%s'\n" "${FILES_TO_PROCESS[@]:0:5}"
-            if (( FILES_COUNT > 5 )); then
-              echo "...and $((FILES_COUNT - 5)) more elements."
-            fi
-          else
-            echo "(FILES_TO_PROCESS is empty)"
-          fi
 
-          echo "DEBUG: Determining if files need processing. Raw count from array: '$FILES_COUNT'"
-          if (( FILES_COUNT == 0 )); then
-            echo "No new .drawio files found to process for ID assignment (count was 0)."
-          else
-            echo "Found $FILES_COUNT potential new .drawio file(s) to process:"
-            printf "%s\n" "${FILES_TO_PROCESS[@]}"
-
-            for file_path in "${FILES_TO_PROCESS[@]}"; do
-              echo "Processing file_path from FILES_TO_PROCESS array: '$file_path'" # Added log
-              # Double check if the file actually exists before processing
-              if [ ! -f "$file_path" ]; then
-                echo "File '$file_path' listed but not found on disk. Skipping."
-                continue
-              fi
-
-              original_basename=$(basename "$file_path" .drawio)
-              file_dir=$(dirname "$file_path")
-
-              # Check if filename already contains the ID pattern " (xxx)" at the end (before .drawio)
-              # Regex: space, opening parenthesis, three digits, closing parenthesis, end of string.
-              if [[ "$original_basename" =~ \ \([0-9]{3}\)$ ]]; then
-                echo "File '$file_path' (basename: '$original_basename') already has an ID pattern. Skipping."
-              else
-                echo "File '$file_path' (basename: '$original_basename') does NOT have an ID pattern. Assigning new ID."
-                CURRENT_ID=$((CURRENT_ID + 1))
-                FORMATTED_ID=$(printf "%03d" "$CURRENT_ID")
-                new_filename_base="${original_basename} (${FORMATTED_ID})"
-                new_filepath="${file_dir}/${new_filename_base}.drawio"
-                echo "Attempting to rename: '$file_path' to '$new_filepath'"
-                if git mv "$file_path" "$new_filepath"; then
-                  echo "SUCCESS: git mv command executed for '$file_path'."
-                  # Verify the move
-                  if [ -f "$new_filepath" ] && [ ! -f "$file_path" ]; then
-                    echo "VERIFIED: '$new_filepath' exists and '$file_path' is removed."
-                    NEW_IDS_WERE_ASSIGNED=true
-                  else
-                    echo "ERROR: Post-mv verification FAILED for '$new_filepath'."
-                    echo "Details: '$new_filepath' exists? $(test -f "$new_filepath" && echo YES || echo NO). '$file_path' exists? $(test -f "$file_path" && echo YES || echo NO)."
-                    # Potentially revert or handle error
-                  fi
+          # Always do a fallback scan: assign IDs to any .drawio file missing an ID, every run
+          echo "\n===== Fallback: Scanning all drawio_files/*.drawio for missing IDs ====="
+          for file_path in drawio_files/*.drawio; do
+            [ -f "$file_path" ] || continue
+            original_basename=$(basename "$file_path" .drawio)
+            file_dir=$(dirname "$file_path")
+            if [[ "$original_basename" =~ \ \([0-9]{3}\)$ ]]; then
+              echo "(Fallback) File '$file_path' already has an ID pattern. Skipping."
+            else
+              echo "(Fallback) File '$file_path' does NOT have an ID pattern. Assigning new ID."
+              CURRENT_ID=$((CURRENT_ID + 1))
+              FORMATTED_ID=$(printf "%03d" "$CURRENT_ID")
+              new_filename_base="${original_basename} (${FORMATTED_ID})"
+              new_filepath="${file_dir}/${new_filename_base}.drawio"
+              echo "(Fallback) Attempting to rename: '$file_path' to '$new_filepath'"
+              if git mv "$file_path" "$new_filepath"; then
+                echo "(Fallback) SUCCESS: git mv command executed for '$file_path'."
+                if [ -f "$new_filepath" ] && [ ! -f "$file_path" ]; then
+                  echo "(Fallback) VERIFIED: '$new_filepath' exists and '$file_path' is removed."
+                  NEW_IDS_WERE_ASSIGNED=true
                 else
-                  MV_EXIT_CODE=$?
-                  echo "ERROR: git mv '$file_path' '$new_filepath' FAILED with exit code $MV_EXIT_CODE."
-                  if [ -e "$new_filepath" ]; then
-                    echo "DIAGNOSTIC: Target '$new_filepath' already exists on disk."
-                  fi
-                  if [ ! -e "$file_path" ]; then
-                    echo "DIAGNOSTIC: Source '$file_path' does not exist prior to mv command (unexpected)."
-                  fi
+                  echo "(Fallback) ERROR: Post-mv verification FAILED for '$new_filepath'."
+                  echo "(Fallback) Details: '$new_filepath' exists? $(test -f "$new_filepath" && echo YES || echo NO). '$file_path' exists? $(test -f "$file_path" && echo YES || echo NO)."
+                fi
+              else
+                MV_EXIT_CODE=$?
+                echo "(Fallback) ERROR: git mv '$file_path' '$new_filepath' FAILED with exit code $MV_EXIT_CODE."
+                if [ -e "$new_filepath" ]; then
+                  echo "(Fallback) DIAGNOSTIC: Target '$new_filepath' already exists on disk."
+                fi
+                if [ ! -e "$file_path" ]; then
+                  echo "(Fallback) DIAGNOSTIC: Source '$file_path' does not exist prior to mv command (unexpected)."
                 fi
               fi
-            done
-          fi
+            fi
+          done
 
           if [ "$NEW_IDS_WERE_ASSIGNED" = true ]; then
             echo "New IDs were assigned. Updating counter to $CURRENT_ID and committing changes."
