--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -205,6 +205,23 @@ jobs:
             new_filename_base="${original_basename} (${FORMATTED_ID})"
             new_filepath="${file_dir}/${new_filename_base}.drawio"
             echo "(Fallback) Attempting to rename: '$file_path' to '$new_filepath'"
+
+            # Get the commit hash, message, and author for the commit that added this file
+            orig_commit_hash=$(git log --diff-filter=A --format="%H" -- "$file_path" | head -n 1)
+            orig_commit_msg=$(git log --diff-filter=A --format="%s" -- "$file_path" | head -n 1)
+            orig_commit_author=$(git log --diff-filter=A --format="%an <%ae>" -- "$file_path" | head -n 1)
+            orig_commit_date=$(git log --diff-filter=A --format="%cI" -- "$file_path" | head -n 1)
+
+            if [ -z "$orig_commit_msg" ]; then
+              orig_commit_msg="Chore: Assign IDs to new diagrams and update counter [skip ci]"
+            fi
+            if [ -z "$orig_commit_author" ]; then
+              orig_commit_author="github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
+            fi
+            if [ -z "$orig_commit_date" ]; then
+              orig_commit_date="$(date -Iseconds)"
+            fi
+
             if git mv "$file_path" "$new_filepath"; then
               echo "(Fallback) SUCCESS: git mv command executed for '$file_path'."
               # After git mv, sometimes the original file may still exist due to case-insensitive FS or git quirks. Remove it if present.
@@ -222,18 +239,8 @@ jobs:
                 NEW_IDS_WERE_ASSIGNED=true
                 # Stage the rename
                 git add "$new_filepath"
-                # Get the last commit message and author for the original file
-                orig_commit_msg=$(git log -1 --format="%s" -- "$file_path")
-                orig_commit_author=$(git log -1 --format="%an <%ae>" -- "$file_path")
-                if [ -z "$orig_commit_msg" ]; then
-                  orig_commit_msg="Chore: Assign IDs to new diagrams and update counter [skip ci]"
-                fi
-                if [ -z "$orig_commit_author" ]; then
-                  orig_commit_author="github-actions[bot] <github-actions[bot]@users.noreply.github.com>"
-                fi
                 # Commit the rename with the original commit message and author
-                GIT_COMMITTER_DATE="$(git log -1 --format='%cI' -- "$file_path" 2>/dev/null || date -Iseconds)" \
-                git commit --author="$orig_commit_author" -m "$orig_commit_msg" --no-verify || \
+                GIT_COMMITTER_DATE="$orig_commit_date" git commit --author="$orig_commit_author" -m "$orig_commit_msg" --no-verify || \
                 git commit -m "$orig_commit_msg" --no-verify
               else
                 echo "(Fallback) ERROR: Post-mv verification FAILED for '$new_filepath'."
@@ -389,6 +396,7 @@ jobs:
           cat /tmp/changed_files.txt
 
           # Process each changed file
+
           while IFS= read -r file || [ -n "$file" ]; do
             if [ -f "$file" ]; then
               echo "Processing: $file"
@@ -431,57 +439,67 @@ jobs:
                 echo '</body>' >> "$output_html"
                 echo '</html>' >> "$output_html"
 
-                # Add changelog entry for this file only, using the correct commit message
-                # Get the last commit message and hash for this file
-
-                # Use git log --follow to get the true original commit message and hash (across renames)
-                log_lines=$(git log --follow --find-renames=40% --format="%s|%h" -- "$file" | head -n 2)
+                # Improved: Get the original user commit message for changelog
+                # Get full commit history for the file (message|hash|author|email|date)
+                log_lines=$(git log --follow --find-renames=40% --format="%s|%h|%an|%ae|%cI" -- "$file" | head -n 3)
                 commit_msg=""
                 commit_hash=""
-                first_msg=""
-                first_hash=""
-                second_msg=""
-                second_hash=""
-                IFS=$'\n' read -r first second <<< "$log_lines"
+                commit_author=""
+                commit_email=""
+                commit_date=""
+                # Parse up to three lines for robust fallback
+                IFS=$'\n' read -r first second third <<< "$log_lines"
                 if [ -n "$first" ]; then
-                  first_msg="${first%|*}"
-                  first_hash="${first##*|}"
+                  first_msg="${first%%|*}"
+                  first_rest="${first#*|}"
+                  first_hash="${first_rest%%|*}"
+                  first_rest2="${first_rest#*|}"
+                  first_author="${first_rest2%%|*}"
+                  first_rest3="${first_rest2#*|}"
+                  first_email="${first_rest3%%|*}"
+                  first_date="${first_rest3#*|}"
                 fi
                 if [ -n "$second" ]; then
-                  second_msg="${second%|*}"
-                  second_hash="${second##*|}"
+                  second_msg="${second%%|*}"
+                  second_rest="${second#*|}"
+                  second_hash="${second_rest%%|*}"
+                  second_rest2="${second_rest#*|}"
+                  second_author="${second_rest2%%|*}"
+                  second_rest3="${second_rest2#*|}"
+                  second_email="${second_rest3%%|*}"
+                  second_date="${second_rest3#*|}"
                 fi
+                if [ -n "$third" ]; then
+                  third_msg="${third%%|*}"
+                  third_rest="${third#*|}"
+                  third_hash="${third_rest%%|*}"
+                  third_rest2="${third_rest#*|}"
+                  third_author="${third_rest2%%|*}"
+                  third_rest3="${third_rest2#*|}"
+                  third_email="${third_rest3%%|*}"
+                  third_date="${third_rest3#*|}"
+                fi
+
+                # If the first commit is the auto-ID, use the second (user's original commit)
                 if [[ "$first_msg" == "Chore: Assign IDs to new diagrams and update counter [skip ci]" && -n "$second_msg" ]]; then
                   commit_msg="$second_msg"
                   commit_hash="$second_hash"
-                elif [[ "$first_msg" == "Chore: Assign IDs to new diagrams and update counter [skip ci]" ]]; then
-                  # Only the ID assignment commit is present, try to find the original file by blob hash
-                  blob_hash=$(git ls-tree HEAD -- "$file" | awk '{print $3}')
-                  if [ -n "$blob_hash" ]; then
-                    # Search previous commit for a .drawio file with the same blob hash
-                    orig_file=$(git ls-tree HEAD^ drawio_files/*.drawio 2>/dev/null | awk -v b="$blob_hash" '$3==b{print $4}' | head -n 1)
-                    if [ -n "$orig_file" ]; then
-                      # Get the commit message for the original file
-                      orig_commit_msg=$(git log -1 --format="%s" -- "$orig_file")
-                      orig_commit_hash=$(git log -1 --format="%h" -- "$orig_file")
-                      if [ -n "$orig_commit_msg" ]; then
-                        commit_msg="$orig_commit_msg"
-                        commit_hash="$orig_commit_hash"
-                      else
-                        commit_msg="$first_msg"
-                        commit_hash="$first_hash"
-                      fi
-                    else
-                      commit_msg="$first_msg"
-                      commit_hash="$first_hash"
-                    fi
-                  else
-                    commit_msg="$first_msg"
-                    commit_hash="$first_hash"
-                  fi
+                  commit_author="$second_author"
+                  commit_email="$second_email"
+                  commit_date="$second_date"
+                elif [[ "$first_msg" == "Chore: Assign IDs to new diagrams and update counter [skip ci]" && -n "$third_msg" ]]; then
+                  # Fallback: if second is also auto-ID, use third
+                  commit_msg="$third_msg"
+                  commit_hash="$third_hash"
+                  commit_author="$third_author"
+                  commit_email="$third_email"
+                  commit_date="$third_date"
                 else
                   commit_msg="$first_msg"
                   commit_hash="$first_hash"
+                  commit_author="$first_author"
+                  commit_email="$first_email"
+                  commit_date="$first_date"
                 fi
 
                 # Determine versioning for this file
