--- a/.github/workflows/drawio-convert.yml
+++ b/.github/workflows/drawio-convert.yml
@@ -395,13 +395,22 @@ jobs:
 
           # Fallback: If still no files, process any ID'd .drawio file that does not have a corresponding .html output
           if [ ! -s /tmp/changed_files.txt ]; then
-            echo "No changed ID'd .drawio files detected in recent commits. Running fallback: process any ID'd .drawio file missing HTML output."
+            echo "No changed ID'd .drawio files detected in recent commits. Running fallback: process any ID'd .drawio file missing HTML output or with new commits."
             shopt -s nullglob
+            changelog_file="html_files/CHANGELOG.csv"
             for file in drawio_files/*\ \([0-9][0-9][0-9]\).drawio; do
               [ -f "$file" ] || continue
               base=$(basename "$file" .drawio)
               html_file="html_files/${base}.html"
-              if [ ! -f "$html_file" ]; then
+              # Get latest commit hash for this file
+              latest_hash=$(git log -1 --format="%h" -- "$file")
+              # Get last commit hash for this file from the changelog
+              last_changelog_hash=""
+              if [ -f "$changelog_file" ]; then
+                last_changelog_hash=$(awk -F',' -v f="$file" 'tolower($4)==tolower(f){gsub(/\"/,"",$(NF)); print $(NF)}' "$changelog_file" | tail -n 1)
+              fi
+              # If HTML is missing or commit hash is different, process this file
+              if [ ! -f "$html_file" ] || [ "$latest_hash" != "$last_changelog_hash" ]; then
                 echo "$file" >> /tmp/changed_files.txt
               fi
             done
